syntax = "proto3";
package connection;

option go_package = "github.com/example/path/gen;connection";

message Chunk {
    bytes chunk = 1;
    int32 nChunk = 2;
    string NombreLibro = 3;
}

message NombreLibro {
    string NombreLibro = 1;
}

message Message {
    string message = 1;
}

message DivisionLibro {
    string NombreLibro = 1;
    int32 nChunk = 2;
}

message ListaNChunks {
    repeated int32 listachunk = 1;
}

message Distribucion {
    string NombreLibro = 1;
    int32 numeroPar = 2;
    repeated ListaNChunks listaDataNodesChunk = 3;
}

service MensajeriaService{
    rpc EnviaChunks(Chunk) returns (Message) {}
    rpc ConsultaUbicacionArchivo(NombreLibro) returns (Distribucion) {}
    rpc DescargaChunk(DivisionLibro) returns (Chunk) {}
    rpc EnviaPropuesta(Distribucion) returns (Message) {}
    rpc EnviaDistribucion(Distribucion) returns (Message) {}
}